<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Body Fitness - Gym Workout Mobile Trainer</string>

    <!-- Strings related to login -->
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_weight">Weight</string>
    <string name="label_kg">Kg</string>
    <string name="label_lbs">Lbs</string>
    <string name="label_submit">Submit</string>
    <string name="label_gender">Gender</string>
    <string name="label_height">Height</string>
    <string name="label_age">Age</string>
    <string name="label_bmi">BMI</string>
    <string name="label_bmr">BMR</string>
    <string name="label_chest">Chest</string>
    <string name="label_chest_detail">This results in higher and relatively larger-looking breasts, improving their shape</string>
    <string name="label_my_height_is">My Height is</string>
    <string name="let_s_train">Let\'s Train</string>
    <string name="fitness_calculator">Fitness Calculator</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="rate_us">Rate Us</string>
    <string name="labe_jalal">Jalal</string>
    <string name="label_68">68</string>
    <string name="_5_fts">5 fts</string>
    <string name="_6_inches">6 Inches</string>
    <string name="label_bench_press">Bench Press</string>
    <string name="label_bench_press">Bench Press</string>
    <string name="label_decline_crunches">Decline Crunches</string>
    <string name="label_incline_bench_press">Incline Bench Press</string>
    <string name="label_incline_fly">Incline Fly</string>
    <string name="dumbell_lying_fly">Dumbbell Lying Fly</string>
    <string name="dumbell_fly">Dumbbell Flyes</string>
    <string name="barbel_bench_press">Barbell Bench Press</string>
    <string name="dumbel_decline_fly">Dumbbell Decline Fly</string>

</resources>
